<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="orders">Orders</string>
  <string name="internet_connection_not_available">Internet connection not available.</string>
  <string name="date_apt">Apt date:"</string>
  <string name="date_consult">Consult date:"</string>
  <string name="date_order">Date:&#160;&#160; &#160; &#160; &#160;"</string>
  <string name="date_">Date:&#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160;"</string>
  <string name="payment">Payment:</string>
  <string name="payment_">Payment:&#160;&#160;&#160; &#160; &#160;</string>
  <string name="payment_type_colon">Payment type:</string>
  <string name="payment_type">Payment type</string>
  <string name="payment_mode">Payment mode:</string>
  <string name="delivery">"Delivery: &#160;"</string>
  <string name="delivery_mode_n">Delivery mode: &#160;</string>
  <string name="delivery_type_colon">Delivery type:</string>
  <string name="delivery_type">Delivery type</string>
  <string name="cancel_order"><u>Cancel order</u></string>
  <string name="cancel_apt"><u>Cancel appointment</u></string>
  <string name="cancel_consult"><u>Cancel consultation</u></string>
  <string name="bookings">Bookings</string>
  <string name="appointments">Appointments</string>
  <string name="location">"Location:"</string>
  <string name="duration">"Duration (mins)"</string>
  <string name="schedule">""</string>
  <string name="queryHintOrder">Search order by Id</string>
  <string name="queryHintAppointment">Search appointment by Id</string>
  <string name="queryHintAppointmentN">Search by patient name/number</string>
  <string name="queryHintVideo">Search consultation by Id</string>
  <string name="queryHintVideoN">Search by patient name/number</string>
  <string name="create">CREATE&#160;&#160;</string>
  <string name="status_n">Status:</string>
  <string name="status_payment_n">Payment status:</string>
  <string name="status_payment">Payment status</string>
  <string name="business">Business</string>
  <string name="booking_details">Booking details</string>
  <string name="apt_details">Appointment details</string>
  <string name="booking_requested">Booking requested</string>
  <string name="option_comes_here">Option comes here</string>
  <string name="confirm_order_n">Confirm order</string>
  <string name="pickup">Pickup</string>
  <string name="delivery_partner">Delivery partner</string>
  <string name="order_details">Order details</string>
  <string name="new_booking">New booking</string>
  <string name="new_booking_n">New Booking</string>
  <string name="video_consultation">Consultations</string>
  <string name="start_call">Start call</string>
  <string name="payment_reminder">Send payment reminder</string>
  <string name="call_could_not_happen">Call couldn\'t happen</string>
  <string name="copied_patient_url">Copied patient URL</string>
  <string name="error_copied_patient_url">Error copied patient URL</string>
  <string name="error_opening_consultation_window">Error opening consultation window</string>
  <string name="aug_sep_2020">Aug - Sep, 2020</string>
  <string name="go_to_current_week">Go to current week</string>
  <string name="consultation_type_camel_case">Consultation type</string>
  <string name="new_apppointment_camel_case">New Appointment</string>
  <string name="appointment_new_title">New Appointment</string>
  <string name="update_apt_consult" tools:ignore="ExtraTranslation">Update Appointment</string>
  <string name="in_clinic">In-clinic</string>
  <string name="consulting_service">Consulting service</string>
  <string name="start_time_camel_case">Start time</string>
  <string name="fees_incl_gst">Fees (Incl. GST)</string>
  <string name="final_price">Final price</string>
  <string name="patient_name_camel_case">Patient name</string>
  <string name="age_years">Age (years)</string>
  <string name="patient_mobile_number">Patient mobile number</string>
  <string name="patient_email_id_optional">Patient Email ID (optional)</string>
  <string name="create_appointment_note">Upon your confirmation, patient will be immediately notified with an Email and SMS with the appointment details.</string>
  <string name="confirm">Confirm</string>
  <string name="_12">12</string>
  <string name="sun">Sun</string>
  <string name="tuesday_has_been_marked_as_off">Tuesday has been marked as off</string>
  <string name="mon_9_am_to_5_pm_br_1_pm_to_2pm">Mon - 9 AM to 5 PM : BR - 1 PM to 2PM</string>
  <string name="cosulting_service_not_available">Consulting Service is not available</string>
  <string name="doctor_staff_not_available">Doctor is not available</string>
  <string name="consult_service">Consulting service</string>
  <string name="ok">Ok</string>
  <string name="dentist">Dentist</string>
  <string name="select_later_time_toast_string">Please select a time after the current time.</string>
  <string name="booking_created">Booking Created!</string>
  <string name="video_consultation_camel_case">Video consultation</string>
  <string name="please_select_time_slot">Please select time slot</string>
  <string name="confirm_appointment">Confirm appointment</string>
  <string name="cancel_video_consultation">Cancel video consultation</string>
  <string name="call_details">Call details</string>
  <string name="cancel_appointment"><u>Cancel appointment</u></string>
  <string name="cancel_appointment_n">Cancel appointment</string>
  <string name="please_add_doctor_first">Doctor not added, please add first.</string>
  <string name="cancel_appointment_confirmation_message">Are you sure you want to cancel the appointment?</string>
  <string name="no">No</string>
  <string name="yes">Yes</string>
  <string name="cancel_consultation_confirmation_message">Are you sure you want to cancel the video consultation?</string>
  <string name="cancel_order_confirmation_message">Are you sure you want to cancel the order?</string>
  <string name="please_add_teacher_first">Teacher not added, please add first.</string>
  <string name="masseur_masseuse_not_added">Masseur/Masseuse not add, please add first</string>
  <string name="please_add_hotel_room_first">Please add a hotel room first.</string>
  <string name="please_add_table_first">Please add a table first.</string>
  <string name="please_add_barber_first">Please add a barber first.</string>
  <string name="please_add_commodity_first">Please add a manufactured commodity first.</string>
  <string name="please_add_retail_commodity_first">Please add a retail commodity first.</string>
  <string name="please_add_service_first">Please add a service first.</string>
  <string name="email_invalid_format_error">The email is in an invalid format.</string>
  <string name="phone_invalid_format_error">The number is in invalid format.</string>
  <string name="reschedule_consultation">Reschedule consultation</string>
  <string name="copy_video_call_link">Copy video call link</string>
  <string name="open_consultation_window">Open consultation  window</string>
  <string name="appointment_confirmed">Appointment confirmed successfully!</string>
  <string name="order_confirmed">Order confirmed successfully!</string>
  <string name="payment_confirmed">Payment confirmed successfully!</string>
  <string name="payment_request_send">Payment reminder sent successfully!</string>
  <string name="time_remaining">Time remaining</string>
  <string name="the_video_consultation_has_been_cancelled">The video consultation has been cancelled</string>
  <string name="the_appointment_has_been_cancelled">The appointment has been cancelled.</string>
  <string name="select_doctor">Select doctor</string>
  <string name="at">at</string>
  <string name="call_buyer">Call buyer</string>
  <string name="confirm_order_normal">Confirm order</string>
  <string name="mark_as_Ready_for_Pickup">Mark as ‘ready for pickup’</string>
  <string name="send_re_booking_reminder">Send re-booking reminder</string>
  <string name="mark_as_delivered">Mark as ‘delivered’</string>
  <string name="mark_as_picked_by_customer">Mark as ‘picked by customer’</string>
  <string name="cancel_order_normal">Cancel order</string>
  <string name="invoice">Invoice</string>
  <string name="customer_feedback_received">Customer feedback received</string>
  <string name="change">Change</string>
  <string name="placing_order_is_super_easy">Placing order is super easy.</string>
  <string name="select_add_a_customer">Select/add a customer</string>
  <string name="select_products_services">Select products/services</string>
  <string name="review_details_and_confirm">Review details and confirm</string>
  <string name="get_started">Get started</string>
  <string name="add_a_customer_or_select_from_your_contact_book">Add a customer or select from your contact book.</string>
  <string name="customer_name">Customer name*</string>
  <string name="customer_phone_number">Customer phone number*</string>
  <string name="add_a_customer">Add a customer</string>
  <string name="add_a_customer_n">Add a Customer</string>
  <string name="customer_email_id_optional">Customer email ID (optional)</string>
  <string name="enter_customer_s_email_id">Enter customer’s email ID</string>
  <string name="address">Address*</string>
  <string name="type_address">Type address</string>
  <string name="enter_customer_s_city">Enter customer’s city</string>
  <string name="state">State*</string>
  <string name="select_customer_s_state">Select customer’s state</string>
  <string name="pincode">Pincode*</string>
  <string name="enter_customer_s_pincode">Enter customer’s pincode</string>
  <string name="go_back">Go back</string>
  <string name="marking_as_shipped">Marking as shipped</string>
  <string name="order_shipped_via">Order shipped via</string>
  <string name="local_delivery_person">Local delivery person</string>
  <string name="delivery_partner_vendor">Delivery partner/vendor</string>
  <string name="delivery_person_name">Delivery person name</string>
  <string name="write_the_delivery_person_name">Write the delivery person name</string>
  <string name="delivery_person_contact_number">Delivery person contact number</string>
  <string name="please_make_sure_above_details_are_correct_delivery_person_details">Please make sure above details are correct. Boost will send an email and an SMS to the customer on your behalf, informing them of the order being ‘out for delivery’ along with delivery person details.</string>
  <string name="please_make_sure_above_details_are_correct_delivery_person_details_partner">Please make sure above details are correct. Boost will send an email and an SMS to the customer on your behalf, informing them of the order being ‘Shipped’ along with consignment tracking details.</string>
  <string name="notify_customer">Notify customer</string>
  <string name="consignment_id">Consignment ID</string>
  <string name="paste_consignment_id">Paste Consignment ID</string>
  <string name="consignment_tracking_url_provided_by_vendor">Consignment tracking URL (provided by vendor)</string>
  <string name="paste_consignment_tracking_url">Paste consignment tracking URL</string>
  <string name="str_city">City*</string>
  <string name="edit_customer_info">Edit customer info</string>
  <string name="edit_customer_address">Edit customer Address</string>
  <string name="pick_another_customer">Pick another customer</string>
  <string name="payment_done_merchant_desc"><b>NOTE:</b> Payment status once confirmed can not be changed unless appointment is cancelled and refund is initiated.</string>
  <string name="how_did_customer_pay_you"><b>How did customer pay you?</b></string>
  <string name="payment_info">Payment info</string>
  <string name="cash_payment">Cash</string>
  <string name="card_payment">Card</string>
  <string name="upi_payment">UPI</string>
  <string name="others_payment">Others</string>
  <string name="confirm_payment">Confirm payment</string>
  <string name="cancel">Cancel</string>
  <string name="_91_xxxxx_xxxxx">+91 XXXXX XXXXX</string>
</resources>