<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.framework.views.customViews.CustomTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/size_8"
      android:text="@string/address"
      android:textColor="@color/black_4a4a4a"
      app:fontFamily="@font/regular"
      app:textType="BODY_1" />


    <com.framework.views.customViews.CustomEditText
      android:id="@+id/edit_address"
      style="@style/EditTextStyle"
      android:layout_marginTop="@dimen/size_6"
      android:layout_marginBottom="@dimen/size_10"
      android:gravity="center_vertical"
      android:hint="@string/type_address"
      android:inputType="textCapWords"
      android:maxLines="1"
      android:padding="@dimen/size_2"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_service_name" />


    <com.framework.views.customViews.CustomTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/size_12"
      android:text="@string/str_city"
      android:textColor="@color/black_4a4a4a"
      app:fontFamily="@font/regular"
      app:textType="BODY_1" />

    <com.framework.views.customViews.CustomEditText
      android:id="@+id/edit_city"
      style="@style/EditTextStyle"
      android:layout_marginTop="@dimen/size_6"
      android:layout_marginBottom="@dimen/size_10"
      android:gravity="center_vertical"
      android:drawableEnd="@drawable/ic_arrow_down_orange"
      android:drawableTint="@color/grey_dark_2"
      android:hint="@string/enter_customer_s_city"
      android:focusable="false"
      android:clickable="true"
      android:inputType="none" />

    <LinearLayout
      android:id="@+id/status_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <com.framework.views.customViews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_12"
        android:text="@string/state"
        android:textColor="@color/black_4a4a4a"
        app:fontFamily="@font/regular"
        app:textType="BODY_1" />

      <com.framework.views.customViews.CustomEditText
        android:id="@+id/edit_state"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/size_6"
        android:layout_marginBottom="@dimen/size_10"
        android:gravity="center_vertical"
        android:hint="@string/select_customer_s_state"
        android:focusable="false"
        android:clickable="false"
        android:inputType="none" />
    </LinearLayout>


    <com.framework.views.customViews.CustomTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/size_12"
      android:text="@string/pincode"
      android:textColor="@color/black_4a4a4a"
      app:fontFamily="@font/regular"
      app:textType="BODY_1" />

    <com.framework.views.customViews.CustomEditText
      android:id="@+id/edit_pin"
      style="@style/EditTextStyle"
      android:layout_marginTop="@dimen/size_6"
      android:layout_marginBottom="@dimen/size_10"
      android:gravity="center_vertical"
      android:hint="@string/enter_customer_s_pincode"
      android:imeOptions="actionDone"
      android:inputType="number"
      android:maxLength="6"
      android:singleLine="true" />
  </androidx.appcompat.widget.LinearLayoutCompat>
</layout>