<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
    style="@style/match_wrap"
    android:background="@android:color/transparent">

    <com.framework.views.customViews.CustomTextView
      android:id="@+id/tvTitle"
      style="@style/match_wrap"
      android:layout_marginStart="@dimen/size_20"
      android:layout_marginBottom="@dimen/size_8"
      android:text="@string/marking_as_shipped"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:textType="HEADING_4"
      tools:ignore="RtlSymmetry"
      tools:textColor="@color/dimgray" />

    <com.framework.views.customViews.CustomTextView
      android:id="@+id/tvSubTitle"
      style="@style/match_wrap"
      android:layout_marginStart="@dimen/size_20"
      android:layout_marginBottom="@dimen/size_8"
      android:textColor="@color/white"
      app:fontFamily="@font/italic"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvTitle"
      app:textType="BODY_1"
      tools:text="Order ID #VDJNVBJD"
      tools:textColor="@color/dimgray" />

    <androidx.appcompat.widget.LinearLayoutCompat
      android:id="@+id/coordinatorLayoutBottomSheet"
      style="@style/match_wrap"
      android:layout_marginTop="@dimen/size_10"
      android:background="@drawable/bg_rounded_top_white_2"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/btn_bottom"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvSubTitle">

      <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/match_wrap"
        android:layout_marginTop="@dimen/size_20"
        android:orientation="vertical">

        <com.framework.views.customViews.CustomTextView
          style="@style/match_wrap"
          android:layout_marginStart="@dimen/size_20"
          android:text="@string/order_shipped_via"
          android:textColor="@color/black_4a4a4a"
          app:textType="HEADING_6" />

        <RadioGroup
          android:id="@+id/radioGroup"
          style="@style/match_wrap"
          android:layout_marginTop="@dimen/size_10"
          android:orientation="vertical">

          <com.framework.views.customViews.CustomRadioButton
            android:id="@+id/radio_local"
            style="@style/wrap_wrap"
            android:layout_marginStart="@dimen/size_16"
            android:buttonTint="@color/colorAccent"
            android:checked="true"
            android:text="@string/local_delivery_person"
            android:textColor="@color/black_4a4a4a" />


          <com.framework.views.customViews.CustomRadioButton
            android:id="@+id/radio_partner"
            style="@style/wrap_wrap"
            android:layout_marginStart="@dimen/size_16"
            android:layout_marginTop="@dimen/size_4"
            android:buttonTint="@color/colorAccent"
            android:text="@string/delivery_partner_vendor"
            android:textColor="@color/black_4a4a4a" />

        </RadioGroup>

        <androidx.appcompat.widget.LinearLayoutCompat
          android:id="@+id/local_edt_view"
          style="@style/match_wrap"
          android:orientation="vertical">

          <com.framework.views.customViews.CustomTextView
            style="@style/match_wrap"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/delivery_person_name"
            android:textColor="@color/black_4a4a4a"
            app:textType="HEADING_6" />

          <com.framework.views.customViews.CustomTextField
            android:id="@+id/tv_delivery_person_name"
            style="@style/EditTextStyle"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_20"
            android:background="@drawable/bg_rect_edit_txt"
            android:hint="@string/write_the_delivery_person_name"
            android:inputType="textCapWords"
            android:padding="@dimen/size_12"
            android:singleLine="true"
            android:textColor="@color/warm_grey_10"
            android:textColorHint="@color/primary_grey"
            tools:ignore="UnusedAttribute" />

          <com.framework.views.customViews.CustomTextView
            style="@style/match_wrap"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/delivery_person_contact_number"
            android:textColor="@color/black_4a4a4a"
            app:textType="HEADING_6" />

          <com.framework.views.customViews.CustomTextField
            style="@style/match_wrap"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_20"
            android:id="@+id/edt_number"
            android:background="@drawable/bg_rect_edit_txt"
            android:hint="@string/_91_xxxxx_xxxxx"
            android:inputType="number"
            android:padding="@dimen/size_12"
            android:singleLine="true"
            android:maxLength="10"
            android:textColor="@color/warm_grey_10"
            android:textColorHint="@color/primary_grey"
            tools:ignore="UnusedAttribute" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
          android:id="@+id/partner_edt_view"
          android:layout_width="match_parent"
          android:visibility="gone"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <com.framework.views.customViews.CustomTextView
            style="@style/match_wrap"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/consignment_id"
            android:textColor="@color/black_4a4a4a"
            app:textType="HEADING_6" />

          <com.framework.views.customViews.CustomTextField
            style="@style/match_wrap"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_20"
            android:id="@+id/edt_consignment_id"
            android:background="@drawable/bg_rect_edit_txt"
            android:hint="@string/paste_consignment_id"
            android:padding="@dimen/size_12"
            android:singleLine="true"
            android:textColor="@color/warm_grey_10"
            android:textColorHint="@color/primary_grey"
            tools:ignore="UnusedAttribute" />

          <com.framework.views.customViews.CustomTextView
            style="@style/match_wrap"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_16"
            android:text="@string/consignment_tracking_url_provided_by_vendor"
            android:textColor="@color/black_4a4a4a"
            app:textType="HEADING_6" />

          <com.framework.views.customViews.CustomTextField
            style="@style/match_wrap"
            android:layout_marginStart="@dimen/size_20"
            android:layout_marginTop="@dimen/size_10"
            android:layout_marginEnd="@dimen/size_20"
            android:id="@+id/edt_tracking_url"
            android:background="@drawable/bg_rect_edit_txt"
            android:hint="@string/paste_consignment_tracking_url"
            android:padding="@dimen/size_12"
            android:singleLine="true"
            android:textColor="@color/warm_grey_10"
            android:textColorHint="@color/primary_grey"
            tools:ignore="UnusedAttribute" />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <com.framework.views.customViews.CustomTextView
          style="@style/match_wrap"
          android:layout_marginStart="@dimen/size_20"
          android:layout_marginTop="@dimen/size_16"
          android:layout_marginEnd="@dimen/size_20"
          android:text="@string/please_make_sure_above_details_are_correct_delivery_person_details"
          android:textColor="@color/grey_dark_2"
          app:fontFamily="@font/regular"
          app:textType="CAPTION"
          tools:text="@string/please_make_sure_above_details_are_correct_delivery_person_details_partner" />

        <View
          android:layout_width="match_parent"
          android:layout_height="0.8dp"
          android:layout_marginStart="@dimen/size_10"
          android:layout_marginTop="@dimen/size_20"
          android:layout_marginEnd="@dimen/size_10"
          android:background="@color/light_grey_2" />
      </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
      android:id="@+id/btn_bottom"
      style="@style/match_wrap"
      android:background="@color/white"
      android:gravity="end"
      android:orientation="horizontal"
      android:padding="@dimen/size_14"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

      <com.framework.views.customViews.CustomTextView
        android:id="@+id/tvCancel"
        style="@style/wrap_wrap"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/size_10"
        android:padding="@dimen/size_4"
        android:text="@string/go_back"
        android:textAllCaps="true"
        android:textColor="@color/pinkish_grey"
        app:fontFamily="@font/semi_bold"
        app:textType="BODY_3" />

      <com.framework.views.customViews.CustomButton
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_36"
        android:layout_gravity="center"
        android:background="@drawable/button_rounded_6"
        android:gravity="center"
        android:paddingStart="@dimen/size_28"
        android:paddingEnd="@dimen/size_28"
        android:shadowRadius="0"
        android:stateListAnimator="@null"
        android:text="@string/notify_customer"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:fontFamily="@font/bold"
        app:textType="CAPTION"
        tools:ignore="UnusedAttribute" />
    </androidx.appcompat.widget.LinearLayoutCompat>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>