<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

  </data>

  <LinearLayout style="@style/wrap_wrap">

    <androidx.cardview.widget.CardView
      style="@style/wrap_wrap"
      android:layout_marginStart="@dimen/size_10"
      android:layout_marginTop="@dimen/size_10"
      android:layout_marginEnd="@dimen/size_30"
      android:layout_marginBottom="@dimen/size_10"
      app:cardCornerRadius="@dimen/size_6">

      <LinearLayout
        style="@style/wrap_wrap"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
          android:id="@+id/text_edit_customer_info"
          style="@style/TextSemiBoldStyle"
          android:layout_width="match_parent"
          android:layout_gravity="start"
          android:fontFamily="@font/semi_bold"
          android:gravity="start"
          android:paddingStart="@dimen/size_16"
          android:paddingTop="@dimen/size_14"
          android:paddingEnd="@dimen/size_28"
          android:paddingBottom="@dimen/size_14"
          android:text="@string/edit_customer_info"
          android:textAllCaps="false" />

        <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginStart="@dimen/size_10"
          android:layout_marginEnd="@dimen/size_10"
          android:background="?android:attr/listDivider" />

        <TextView
          android:id="@+id/text_edit_customer_addr"
          style="@style/TextSemiBoldStyle"
          android:layout_gravity="start"
          android:gravity="start"
          android:paddingStart="@dimen/size_16"
          android:paddingTop="@dimen/size_14"
          android:paddingEnd="@dimen/size_28"
          android:paddingBottom="@dimen/size_14"
          android:text="@string/edit_customer_address"
          android:textAllCaps="false" />

        <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginStart="@dimen/size_10"
          android:layout_marginEnd="@dimen/size_10"
          android:background="?android:attr/listDivider"
          android:visibility="gone" />

        <TextView
          android:id="@+id/text_pick_customer"
          style="@style/TextSemiBoldStyle"
          android:layout_gravity="start"
          android:fontFamily="@font/semi_bold"
          android:gravity="start"
          android:paddingStart="@dimen/size_16"
          android:paddingTop="@dimen/size_14"
          android:paddingEnd="@dimen/size_28"
          android:paddingBottom="@dimen/size_14"
          android:text="@string/pick_another_customer"
          android:textAllCaps="false"
          android:visibility="gone" />
      </LinearLayout>
    </androidx.cardview.widget.CardView>
  </LinearLayout>
</layout>